docs/7.52/md/abennews-70-enhancement.md
  

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Release-Specific Changes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews.htm) →  [Changes in Release 7.0 and its EhPs](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-70_ehps.htm) →  [Changes for Release 7.0](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-70.htm) → 

Enhancement Concept in Release 7.0

[1\. Source code enhancements](#!ABAP_MODIFICATION_1@1@)
[
2\. Enhancements using BAdIs](#!ABAP_MODIFICATION_2@2@)

From Release 7.0, [ABAP Workbench](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_workbench_glosry.htm "Glossary Entry") offers a new [enhancement concept](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenenhancement_concept_glosry.htm "Glossary Entry") which enables [enhancements](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenenhancement_glosry.htm "Glossary Entry") to be controlled by [switches](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenswitch_german_glosry.htm "Glossary Entry"). Enhancements to [ABAP source code](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_source_code_glosry.htm "Glossary Entry") and using BAdIs are supported by the ABAP runtime environment.

Modification 1

Source Code Enhancements

For source code enhancements using [source code plug-ins](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensource_code_plugin_glosry.htm "Glossary Entry"), the following new statements have been introduced:

-   [ENHANCEMENT-POINT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapenhancement-point.htm)
    
-   [ENHANCEMENT-SECTION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapenhancement-section.htm)
    
-   [ENHANCEMENT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapenhancement.htm)
    

[Implicit enhancement points](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenimplicit_enh_points.htm) are also available in ABAP source code or parameter interfaces of procedures.

Modification 2

Enhancements Using BAdIs

For enhancements using [BAdIs](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenbadi_glosry.htm "Glossary Entry"), the following new statements have been introduced:

-   [GET BADI](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapget_badi.htm)
    
-   [CALL BADI](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_badi.htm)