docs/7.57/md/abennews-70-enhancement.md
  

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews.htm) →  [News for Release 7.0 and its EhPs](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-70_ehps.htm) →  [News for Release 7.0](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-70.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Enhancement Concept in Release 7.0, ABENNEWS-70-ENHANCEMENT, 757%0D%0A%0D%0AError:%0D
%0A%0D%0A%0D%0A%0D%0ASuggestion for improvement:)

Enhancement Concept in Release 7.0

[1\. Source Code Enhancements](#!ABAP_MODIFICATION_1@1@)
[2\. Enhancements Using BAdIs](#!ABAP_MODIFICATION_2@2@)

From Release 7.0, [ABAP Workbench](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_workbench_glosry.htm "Glossary Entry") offers a new [ABAP Enhancement Framework](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenenhancement_framework_glosry.htm "Glossary Entry") which enables [enhancements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenenhancement_glosry.htm "Glossary Entry") to be controlled by [switches](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenswitch_glosry.htm "Glossary Entry"). Enhancements to [ABAP source code](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_source_code_glosry.htm "Glossary Entry") and using BAdIs are supported by the ABAP runtime framework.

Modification 1   

Source Code Enhancements

For source code enhancements using [source code plug-ins](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensource_code_plugin_glosry.htm "Glossary Entry"), the following new statements have been introduced:

-   [ENHANCEMENT-POINT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapenhancement-point.htm)
-   [ENHANCEMENT-SECTION](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapenhancement-section.htm)
-   [ENHANCEMENT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapenhancement.htm)

[Implicit enhancement points](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenimplicit_enh_points.htm) are also available in ABAP source code or parameter interfaces of procedures.

Modification 2   

Enhancements Using BAdIs

For enhancements using [BAdIs](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbadi_glosry.htm "Glossary Entry"), the following new statements have been introduced:

-   [GET BADI](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapget_badi.htm)
-   [CALL BADI](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapcall_badi.htm)